[package]
name = "exorust-fault-tolerance"
version = "0.1.0"
edition = "2021"
description = "Phase 4 fault tolerance system with checkpointing and recovery"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bincode = "1.3"
lz4 = "1.24"
# exorust-memory = { path = "../memory" }
# exorust-runtime = { path = "../runtime" }
# exorust-storage = { path = "../storage" }
# exorust-agent-core = { path = "../agent-core" }

# ML dependencies for predictive scaling
candle-core = { workspace = true }
candle-nn = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
criterion = { workspace = true }

[features]
default = []
# cuda = ["exorust-memory/cuda", "exorust-runtime/cuda"]