[package]
name = "stratoswarm-fault-tolerance"
version = "0.1.0"
edition = "2021"
description = "Phase 4 fault tolerance system with checkpointing and recovery"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = "0.12"
bincode = "1.3"
lz4 = "1.24"
# stratoswarm-memory = { path = "../memory" }
# stratoswarm-runtime = { path = "../runtime" }
# stratoswarm-storage = { path = "../storage" }
# stratoswarm-agent-core = { path = "../agent-core" }

# ML dependencies for predictive scaling
candle-core = { workspace = true }
candle-nn = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
criterion = { workspace = true }

[features]
default = []
# cuda = ["stratoswarm-memory/cuda", "stratoswarm-runtime/cuda"]