[package]
name = "stratoswarm-global-knowledge-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Global knowledge graph with cross-region replication and compliance-aware data handling"

[dependencies]
async-trait = "0.1.83"
cudarc = { version = "0.11", features = ["driver"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
dashmap = "6.1"
parking_lot = "0.12"
petgraph = "0.6"
bincode = "1.3"
lru = "0.12"
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"
futures = "0.3"

[dev-dependencies]
tempfile = "3.14"
criterion = "0.5"
proptest = "1.6"
test-log = "0.2"
env_logger = "0.11"
mockall = "0.13"
