[package]
name = "hpc-ai-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["HPC-AI Team"]
description = "Unified CLI for the HPC-AI platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hpc-ai/hpc-ai-cli"

[[bin]]
name = "hpc"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"

# Async runtime (workspace)
tokio.workspace = true

# Serialization (workspace)
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling (workspace)
thiserror.workspace = true
anyhow.workspace = true

# Logging (workspace)
tracing.workspace = true
tracing-subscriber.workspace = true

# Output formatting
console = "0.15"
indicatif = "0.17"
tabled = "0.17"

# Configuration and state
dirs = "5.0"
chrono.workspace = true

# Async utilities (workspace)
futures.workspace = true
async-trait.workspace = true

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Interactive prompts
dialoguer = "0.11"

# SSH client (for inventory management)
russh = "0.45"
russh-keys = "0.45"

# HTTP server (workspace)
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Credential storage
keyring = "2.3"

# UUID generation (workspace)
uuid.workspace = true

# System info
sysinfo.workspace = true

# Internal crate dependencies (paths updated after RNCCL renumbering)
# warp-cli = { path = "../07-warp/crates/warp-cli", optional = true }
# stratoswarm-cli = { path = "../08-stratoswarm/crates/stratoswarm-cli", optional = true }
# vortex-cli = { path = "../11-vortex/crates/vortex-cli", optional = true }
# nebula-cli = { path = "../12-nebula/crates/nebula-cli", optional = true }

# Core libraries (using workspace dependencies)
hpc-channels.workspace = true

# HPC Foundation crates
hpc-inventory = { path = "../hpc-foundation/hpc-inventory" }

# StratoSwarm CLI integration
stratoswarm-cli = { path = "../stratoswarm-cli" }

# Storage & Communication
# parcode = { path = "../03-parcode", optional = true }
# rmpi = { path = "../04-rmpi", optional = true }
# rnccl = { path = "../05-rnccl", optional = true }

# GPU Management
# slai = { path = "../06-slai", optional = true }

# Data Processing & ML
# rustyspark = { path = "../09-rustyspark", optional = true }
# rustytorch = { path = "../10-rustytorch", optional = true }

# Observability
# argus = { path = "../14-argus", optional = true }

[features]
default = []

# Feature-gated integrations (uncomment when crates are ready)
# Core Infrastructure
# rustg = []  # GPU-accelerated compiler (00-rust)

# Storage & Communication
# parcode = ["dep:parcode"]    # Lazy-loading storage (03-parcode)
# rmpi = ["dep:rmpi"]          # Message passing (04-rmpi)
# rnccl = ["dep:rnccl"]        # GPU collective communication (05-rnccl)

# GPU Management
# slai = ["dep:slai"]          # GPU cluster management (06-slai)

# Data Transfer & Orchestration
# warp = ["dep:warp-cli"]      # GPU data transfer (07-warp)
# stratoswarm = ["dep:stratoswarm-cli"]  # Orchestration (08-stratoswarm)

# Data Processing & ML
# spark = ["dep:rustyspark"]   # Distributed data processing (09-rustyspark)
# torch = ["dep:rustytorch"]   # ML training (10-rustytorch)

# Networking
# vortex = ["dep:vortex-cli"]  # Edge proxy (11-vortex)
# nebula = ["dep:nebula-cli"]  # Real-time communication (12-nebula)

# Observability
# argus = ["dep:argus"]        # Observability platform (14-argus)

# Enable all features
# full = ["rustg", "parcode", "rmpi", "rnccl", "slai", "warp", "stratoswarm", "spark", "torch", "vortex", "nebula", "argus"]

[dev-dependencies]
tempfile.workspace = true

# Note: Release profile is inherited from workspace
