[package]
name = "hpc-ai-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["HPC-AI Team"]
description = "Unified CLI for the HPC-AI platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hpc-ai/hpc-ai-cli"

[[bin]]
name = "hpc"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"

# Async runtime (workspace)
tokio.workspace = true

# Serialization (workspace)
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling (workspace)
thiserror.workspace = true
anyhow.workspace = true

# Logging (workspace)
tracing.workspace = true
tracing-subscriber.workspace = true

# Output formatting
console = "0.15"
indicatif = "0.17"
tabled = "0.17"

# Configuration and state
dirs = "5.0"
chrono.workspace = true

# Async utilities (workspace)
futures.workspace = true
async-trait.workspace = true

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Interactive prompts
dialoguer = "0.11"

# SSH client (for inventory management)
russh = "0.45"
russh-keys = "0.45"

# HTTP server (workspace)
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Credential storage
keyring = "2.3"

# UUID generation (workspace)
uuid.workspace = true

# System info
sysinfo.workspace = true

# Internal crate dependencies (paths updated after RNCCL renumbering)
# warp-cli = { path = "../warp/crates/warp-cli", optional = true }
# stratoswarm-cli = { path = "../stratoswarm/crates/stratoswarm-cli", optional = true }
# vortex-cli = { path = "../vortex/crates/vortex-cli", optional = true }
# nebula-cli = { path = "../nebula/crates/nebula-cli", optional = true }

# Core libraries (using workspace dependencies)
hpc-channels.workspace = true

# HPC Foundation crates
hpc-inventory = { path = "../hpc-foundation/hpc-inventory" }

# StratoSwarm CLI integration
stratoswarm-cli = { path = "../stratoswarm-cli" }

# Storage & Communication
# parcode = { path = "../parcode", optional = true }
# rmpi = { path = "../rmpi", optional = true }
# rnccl = { path = "../rnccl", optional = true }

# GPU Management
# slai = { path = "../slai", optional = true }

# Data Processing & ML
# rustyspark = { path = "../rustyspark", optional = true }
# rustytorch = { path = "../rustytorch", optional = true }

# Observability
# argus = { path = "../argus", optional = true }

[features]
default = []

# Feature-gated integrations (uncomment when crates are ready)
# Core Infrastructure
# rustg = []  # GPU-accelerated compiler (rustg)

# Storage & Communication
# parcode = ["dep:parcode"]    # Lazy-loading storage (parcode)
# rmpi = ["dep:rmpi"]          # Message passing (rmpi)
# rnccl = ["dep:rnccl"]        # GPU collective communication (rnccl)

# GPU Management
# slai = ["dep:slai"]          # GPU cluster management (slai)

# Data Transfer & Orchestration
# warp = ["dep:warp-cli"]      # GPU data transfer (warp)
# stratoswarm = ["dep:stratoswarm-cli"]  # Orchestration (stratoswarm)

# Data Processing & ML
# spark = ["dep:rustyspark"]   # Distributed data processing (rustyspark)
# torch = ["dep:rustytorch"]   # ML training (rustytorch)

# Networking
# vortex = ["dep:vortex-cli"]  # Edge proxy (vortex)
# nebula = ["dep:nebula-cli"]  # Real-time communication (nebula)

# Observability
# argus = ["dep:argus"]        # Observability platform (argus)

# Enable all features
# full = ["rustg", "parcode", "rmpi", "rnccl", "slai", "warp", "stratoswarm", "spark", "torch", "vortex", "nebula", "argus"]

[dev-dependencies]
tempfile.workspace = true

# Note: Release profile is inherited from workspace
