[package]
name = "exorust-knowledge-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
cudarc = { workspace = true }
exorust-agent-core = { path = "../agent-core" }
exorust-cuda = { path = "../cuda" }
exorust-memory = { path = "../memory" }
exorust-storage = { path = "../storage" }
futures = "0.3"
half = "2.3"
ndarray = "0.15"
parking_lot = "0.12"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
tokio-test = "0.4"

[[bench]]
name = "query_benchmarks"
harness = false

[[bench]]
name = "semantic_benchmarks"
harness = false