[package]
name = "stratoswarm-knowledge-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
cudarc = { workspace = true }
stratoswarm-agent-core = { path = "../agent-core" }
stratoswarm-cuda = { path = "../cuda" }
stratoswarm-memory = { path = "../memory" }
stratoswarm-storage = { path = "../storage" }
futures = "0.3"
half = "2.3"
ndarray = "0.15"
parking_lot = "0.12"
rand = "0.8"
rayon = "1.7"  # Parallel iteration for query execution
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
wide = "0.7"  # SIMD primitives for stable Rust (lecture recommendation)

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
tokio-test = "0.4"

[[bench]]
name = "query_benchmarks"
harness = false

[[bench]]
name = "semantic_benchmarks"
harness = false